cmake_minimum_required(VERSION 3.0.0)
project(image VERSION 0.1.0)

include(CTest)
enable_testing()

# make main project
set(SOURCES 
    Histogram.cpp
    main.cpp)

set(HEADER
    Histogram.h)
    
add_executable(image ${SOURCES} ${HEADER})

#Find Opencv
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    target_include_directories(image PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(image ${OpenCV_LIBS})
endif()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
